# hrisku

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  Dockerfile.bak2  README.md  databaseku.py  docker-compose.yaml  log_conf.json  main.py  pyproject.toml  requirements.txt  settings.py
core/: file.py  img_converter.py  mail.py  myredis.py  rafiexcel.py  responses.py  security.py  utils.py
core/mail_templates/: first-password.html  reset-password.html
env/: pyvenv.cfg
models/: Allowances.py  Attendance.py  AttendanceSummary.py  Bpjs.py  BpjsEmployee.py  Client.py  ClientOutlet.py  ClientPayment.py  Contract.py  ContractClient.py  EmployeeAllowances.py  EmployeeTax.py  ForgotPassword.py  Izin.py  LeaveTable.py  Menu.py  Module.py  ModulePermission.py  NationalHoliday.py  Payroll.py  Performance.py  Permission.py  Role.py  RolePermission.py  ShiftSchedule.py  StatusIzin.py  StatusPayment.py  Tax.py  TimeSheet.py  User.py  UserRole.py  UserToken.py  __init__.py
repository/: attendance.py  attendancesummary.py  auth.py  client.py  client_unittest.py  clientbilling.py  clientbillingreport.py  izin.py  mobile.py  nationalholiday.py  outlet.py  payroll.py  performance.py  permission.py  role.py  shift.py  talent_mapping.py  talent_monitor.py  test_talent_monitor.py  timesheet.py  user_management.py
routes/: auth.py  client.py  clientbilling.py  file.py  historypayment.py  mobile.py  nationalholiday.py  outlet.py  permission.py  role.py  talent_mapping.py  talent_monitor.py  user_management.py
schemas/: auth.py  client.py  clientbilling.py  common.py  izin.py  mobile.py  nationalholiday.py  outlet.py  performance.py  permission.py  role.py  shift.py  talent_mapping.py  talent_monitor.py  user_management.py
tests/: test_talent_mapping.py
