[tool.poetry]
name = "hris"
version = "0.1.0"
description = "HRIS Application"
authors = ["Mahrus"]
package-mode = false

[tool.poetry.dependencies]
redis = "^4.0.2"
python = ">=3.11,<4.0"
absl-py = "2.1.0"
aiomysql = "0.2.0"
aiosmtplib = "3.0.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
astunparse = "1.6.3"
asyncpg = "0.30.0"
bcrypt = "4.3.0"
beautifulsoup4 = "4.13.3"
blinker = "1.9.0"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
dnspython = "2.7.0"
ecdsa = "0.19.0"
email-validator = "2.2.0"
fastapi = "0.115.11"
fastapi-mail = "1.4.2"
filelock = "3.17.0"
fire = "0.7.0"
gdown = "5.2.0"
greenlet = "3.1.1"
grpcio = "1.70.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
iniconfig = "2.1.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.5"
joblib = "1.4.2"
libclang = "18.1.1"
lz4 = "4.4.3"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
minio = "7.2.15"
mysql-connector-python = "9.2.0"
namex = "0.0.8"
numpy = "2.0.2"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
pluggy = "1.5.0"
pyasn1 = "0.4.8"
pycparser = "2.22"
pycryptodome = "3.21.0"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pymysql = "1.1.1"
pysocks = "1.7.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.4.0"
python-multipart = "0.0.20"
pytz = "2025.1"
pyyaml = "6.0.2"
requests = "2.32.3"
rich = "13.9.4"
sentry-sdk = "2.23.1"
six = "1.17.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.38"
starlette = "0.46.0"
termcolor = "2.5.0"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
uvloop = "0.21.0"
watchfiles = "1.0.4"
websockets = "15.0.0"
werkzeug = "3.1.3"
wrapt = "1.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"